--- a/public/css/partials/header.css
+++ b/public/css/partials/header.css
@@ -281,6 +281,8 @@
 .topnav {
     background-color: #333;
     position: absolute;
+    top: 5.2rem;
+    left: 0;
     width: 50%;
   }
   
@@ -326,6 +328,7 @@
   background-color: #333;
     position: absolute;
     right: 0rem;
+    top: 5.2rem;
     width: 14rem;
   }
   
