ajeitando algumas rotas

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -16,7 +16,7 @@
                 <input class="text__field" type="email" name="email" id="email" placeholder="Email" minlength="5" maxlength="150" required>
                 <input class="text__field" type="password" name="password" id="password" placeholder="Senha" minlength="5" maxlength="30" required> 
                 <input class="text__field" type="password" name="passwordConfirm" id="passwordConfirm" placeholder="Repita Senha" minlength="5" maxlength="30" required> 
-                <input class="button_login" type="submit" value="Cadastrar">
+                <input class="button_login" type="submit" value="Criar nova conta">
             </form> 
 
             <div class="alternative__options" style="background-color:#f1f1f1">
