--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -75,7 +75,7 @@
                     </form>
 
                     <div class="alternative__options" style="background-color:#f1f1f1">
-                        <a class="text__forgot" href="">Esqueceu senha?</a>
+                        <a class="text__forgot" href="/forgot-password">Esqueceu senha?</a>
                         <h2 class="text__footer">Não tem?<a href="/register">Registre-se</a></h3>
                     </div>
                 </div>
