--- a/views/users.ejs
+++ b/views/users.ejs
@@ -8,7 +8,7 @@
           
             <div class="container">
                 <div class="box-nav d-flex justify-between">
-                    <a href="/add-user" class="border-shadow">
+                    <a href="/admin/dashboard" class="border-shadow">
                         <span class="text-gradient">Voltar ao dashboard <i class="fas fa-user"></i></span>
                     </a>
                 </div>
@@ -30,7 +30,7 @@
                         <% users.forEach(user => { %>
                         <tbody>
                             <tr>
-                                <td><%= user.id %></td>
+                                <td><%= user.id %></td> 
                                 <td><img class="img-users" src="/assets/male-user-shadow-svgrepo-com.svg" alt=""></td>
                                 <td><%= user.name %></td>
                                 <td><%= user.email %></td>
