--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -7,7 +7,9 @@
     <main class="content">
 
 
-        <div class="users__content">
+        <%- include("partials/navbarAdmin") %>
+
+        <div class="admin__content">
 
             <div class="users__section__header">
                 <h1 class="title__header">Lista de categorias</h1>
