--- a/views/categoriesNew.ejs
+++ b/views/categoriesNew.ejs
@@ -6,8 +6,9 @@
 
     <main class="content">
 
+        <%- include("partials/navbarAdmin") %>
 
-        <div class="users__content">
+        <div class="admin__content">
 
             <div class="users__section__header">
                 <h1 class="title__header">Criar nova categoria</h1>
