organizando base do dashboard de subadmin

--- a/views/dashboardAlt.ejs
+++ b/views/dashboardAlt.ejs
@@ -18,13 +18,13 @@
             </div>
         </div>
             
-        <%- include("partials/navbarAdmin") %>
+        <%- include("partials/navbarSubAdmin") %>
             
         <div class="admin__content">
             <h2>teste</h2>
         </div>
 
-       
+           
     </div>
     
 
