--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,7 +8,7 @@
                 <h1 class="text__heading">Cadastrar</h2>
             </div>
                     
-            <form class="form__login" action="/user/register" method="POST"><!--content__field__text//content__button__submit//content__footer__text-->
+            <form class="form__login" action="/register" method="POST"><!--content__field__text//content__button__submit//content__footer__text-->
                 <% if (message) { %>
                     <h2><%= message %> </h2>
                 <% } %>
