reorganizando view de edição de artigo do admin e subadmin

--- a/views/articlesEditSubadmin.ejs
+++ b/views/articlesEditSubadmin.ejs
@@ -6,8 +6,10 @@
 
     <main class="content">
 
+        <%- include("partials/navbarSubAdmin") %>
 
-        <div class="users__content">
+
+        <div class="admin__content">
 
             <div class="users__section__header">
                 <h1 class="title__header">Editar artigo</h1>
