Terminando criação de categoria 1

--- a/views/partials/headerAlternativo.ejs
+++ b/views/partials/headerAlternativo.ejs
@@ -8,7 +8,43 @@
                     <li><img class="menu__logo" src="/assets/logo.bmp" alt=""></li>
                 
                     <!--menu grande de teste-->
-                    <li class="drop__links"><a href="/">Home</a></li>              
+                    <div class="dropdown">
+                        <li><button class="dropbtn">Experiencias</button></li>
+
+                            <div class="dropdown-content">
+                                <div class="header">
+                                    <h2>Mega Menu</h2>
+                                </div>
+                                
+                                <div class="row">
+                                    <div class="column">
+                                        <h3>Por preços</h3>
+                                        <% categories.forEach(category => { %>
+                                            <a href="#"><%= category.title %></a>                                           
+                                        <% }) %>
+                                        
+                                    </div>
+                                    <div class="column">
+                                        <h3>Por assunto</h3>
+                                        <a href="#">Link 1</a>
+                                        <a href="#">Link 2</a>
+                                        <a href="#">Link 3</a>
+                                    </div>
+                                    <div class="column">
+                                        <h3>Pela BNCC</h3>
+                                        <a href="#">Link 1</a>
+                                        <a href="#">Link 2</a>
+                                        <a href="#">Link 3</a>
+                                    </div>
+                                    <div class="column">
+                                        <h3>Por série</h3>
+                                        <a href="#">Link 1</a>
+                                        <a href="#">Link 2</a>
+                                        <a href="#">Link 3</a>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
                     <li class="drop__links"><a href="#home">Sobre</a></li>
                     <li class="drop__links"><a href="#news">Contato</a></li>
                 </ul>
