--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 
 
 <body>
-    <%- include("partials/header.ejs") %>
+    <%- include("partials/headerAlternativo.ejs") %>
 
     <main class="content">
     
