--- a/views/partials/navbarAdmin.ejs
+++ b/views/partials/navbarAdmin.ejs
@@ -7,11 +7,23 @@
     <button class="tablinks"><a href="/admin/dashboard/articles/deleted">Lista de artigos deletados</a></button>
 
 
-    <h2>CATEGORIAS</h2>
+    <h2>CATEGORIA: PREÇO</h2>
     <button class="tablinks"><a href="/admin/dashboard/categories/new">Criar categoria</a></button>
     <button class="tablinks"><a href="/admin/dashboard/categories">Lista de categorias</a></button>
-    <h2>USUÁRIOS</h2>
+
+    <h2>CATEGORIA: ASSUNTO</h2>
+    <button class="tablinks"><a href="/admin/dashboard/categories/new">Criar categoria</a></button>
+    <button class="tablinks"><a href="/admin/dashboard/categories">Lista de categorias</a></button>
+
+    <h2>CATEGORIA: BNCC</h2>
+    <button class="tablinks"><a href="/admin/dashboard/categories/new">Criar categoria</a></button>
+    <button class="tablinks"><a href="/admin/dashboard/categories">Lista de categorias</a></button>
+
+    <h2>CATEGORIA: SÉRIE</h2>
+    <button class="tablinks"><a href="/admin/dashboard/categories/new">Criar categoria</a></button>
+    <button class="tablinks"><a href="/admin/dashboard/categories">Lista de categorias</a></button>
     
+    <h2>USUÁRIOS</h2>
     <button class="tablinks"><a href="/admin/dashboard/users">Lista de usuários</a></button>
     <button class="tablinks"><a href="/admin/dashboard/users/deleted">Lista de usuários deletados</a></button>
 
