terminando funcionalidade de menu dinamico, e edição pelo admin

--- a/views/partials/headerAlternativo.ejs
+++ b/views/partials/headerAlternativo.ejs
@@ -39,8 +39,8 @@
                                 
                                 <div class="row">
                                     <div class="column">
-                                        <% categories.forEach(category => { %>
-                                            <a href="#"><%= category.title %></a>                                           
+                                        <% categories2.forEach(category2 => { %>
+                                            <a href="#"><%= category2.title %></a>                                           
                                         <% }) %>
                                         
                                     </div>
@@ -59,8 +59,8 @@
                                 
                                 <div class="row">
                                     <div class="column">
-                                        <% categories.forEach(category => { %>
-                                            <a href="#"><%= category.title %></a>                                           
+                                        <% categories3.forEach(category3 => { %>
+                                            <a href="#"><%= category3.title %></a>                                           
                                         <% }) %>
                                         
                                     </div>
