--- a/views/partials/navbarAdmin.ejs
+++ b/views/partials/navbarAdmin.ejs
@@ -6,9 +6,17 @@
     <button class="tablinks"><a href="/admin/dashboard/articles">Lista de artigos</a></button>
     <button class="tablinks"><a href="/admin/dashboard/articles/deleted">Lista de artigos deletados</a></button>
 
-    <h2>CATEGORIAS</h2>
+    <h2>CATEGORIA: ASSUNTOS</h2>
     <button class="tablinks"><a href="/admin/dashboard/categories/new">Criar categoria</a></button>
     <button class="tablinks"><a href="/admin/dashboard/categories">Lista de categorias</a></button>
+
+    <h2>CATEGORIA: PREÇOS</h2>
+    <button class="tablinks"><a href="/admin/dashboard/categories2/new">Criar categoria</a></button>
+    <button class="tablinks"><a href="/admin/dashboard/categories2">Lista de categorias</a></button>
+
+    <h2>CATEGORIA: BNCC</h2>
+    <button class="tablinks"><a href="/admin/dashboard/categories3/new">Criar categoria</a></button>
+    <button class="tablinks"><a href="/admin/dashboard/categories3">Lista de categorias</a></button>
 
     <h2>USUÁRIOS</h2>
     <button class="tablinks"><a href="/admin/dashboard/users">Lista de usuários</a></button>
